feat: [CDS-77481]: Remove list for nodeExecution in expression playground (#51909)
* [CDS-77481]: Remove list for nodeExecution in expression playground

* [CDS-77481]: Remove list for nodeExecution in expression playground

* [CDS-77481]: Added todo

* [CDS-77481]: Sending query to analytics